--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,45 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.btnStyle {
+  position: relative;
+  display: inline-block;
+  padding: 10px 30px;
+  overflow: hidden;
+  background: #3a9e1e;
+  vertical-align: middle;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 600;
+  color: #fff !important;
+  text-align: center;
+  border-radius: 5px;
+  z-index: 1;
+  transition: all 0.5s ease;
+}
+.btnStyle:after,
+.btnStyle:before {
+  content: "";
+  position: absolute;
+  display: block;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background: #0e1d40;
+  transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  transform-origin: center;
+  transform: scale(0) rotate(0);
+  z-index: -1;
+}
+.btnStyle:hover:before {
+  border-radius: 0;
+  transform: scale(1) rotate(-180deg);
+}
+.btnStyle:hover:after {
+  border-radius: 0;
+  transform: scale(1) rotate(180deg);
+}
