--- a/src/Pages/ChatBot/styles.css
+++ b/src/Pages/ChatBot/styles.css
@@ -109,7 +109,7 @@
   display: flex;
   justify-content: center;
   position: fixed;
-  left: 40px;
+  right: 40px;
   bottom: 55px;
   z-index: 9999;
   box-shadow: 5px 5px 13px rgba(91, 81, 81, 0.4);
