checkout page complete

--- a/src/Pages/ChatBot/styles.css
+++ b/src/Pages/ChatBot/styles.css
@@ -36,7 +36,7 @@
   font-size: 0.9rem;
   background-color: rgba(45, 159, 253, 0.589);
   display: flex;
-  background: linear-gradient(to top right, rgb(15, 146, 221), #055991);
+  background: linear-gradient(to top right, rgba(58, 158, 30, 0.6), #3a9e1e);
   border-radius: 10px;
   align-items: center;
   justify-content: center;
@@ -53,7 +53,7 @@
   font-size: 0.9rem;
   padding: 10px;
   border-radius: 3px;
-  background-color: #2273c4;
+  background-color: #3a9e1e;
   display: flex;
   align-items: center;
   color: #fff;
@@ -71,7 +71,7 @@
   font-size: 0.7rem;
   padding: 2px 5px;
   border-radius: 30px;
-  background-color: #2273c4;
+  background-color: #3a9e1e;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -86,7 +86,7 @@
   border-radius: 30px;
   padding: 10px;
   color: #fff;
-  background-color: #0d2d44;
+  background-color: #3a9e1e;
   border: none;
   position: fixed;
   bottom: 25px;
