--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,8 @@
   display: inline-block;
   padding: 10px 30px;
   overflow: hidden;
-  background: #3a9e1e;
+  background: #257830;
+  text-transform: capitalize;
   vertical-align: middle;
   font-size: 16px;
   line-height: 24px;
@@ -39,7 +40,7 @@
 .btnStyle span:before {
   position: absolute;
   content: "";
-  background: #3a9e1e;
+  background: #257830;
   width: 30px;
   height: 30px;
   left: -10px;
@@ -51,7 +52,7 @@
 .btnStyle span:after {
   position: absolute;
   content: "";
-  background: #3a9e1e;
+  background: #257830;
   width: 30px;
   height: 30px;
   right: -10px;
