--- a/src/Pages/ChatBot/styles.css
+++ b/src/Pages/ChatBot/styles.css
@@ -16,23 +16,23 @@
 
 .option-item {
   padding: 8px 15px;
-  border: 1px solid #3a9e1e;
+  border: 1px solid #257830;
   border-radius: 25px;
-  color: #3a9e1e;
+  color: #257830;
   font-size: 0.9rem;
   margin: 3px;
-  box-shadow: inset 0px 0px 0px #3a9e1e;
+  box-shadow: inset 0px 0px 0px #257830;
   transition: all 0.5s;
   cursor: pointer;
 }
 
 .option-item:hover {
-  box-shadow: inset 195px 0px 0px #3a9e1e;
+  box-shadow: inset 195px 0px 0px #257830;
   color: #ffffff;
 }
 .service {
   color: white;
-  background: #3a9e1e;
+  background: #257830;
   border-radius: 10px;
   padding: 1rem;
   font-size: 0.9rem;
@@ -42,7 +42,7 @@
   font-size: 0.9rem;
   background-color: rgba(45, 159, 253, 0.589);
   display: flex;
-  background: linear-gradient(to top right, rgba(58, 158, 30, 0.6), #3a9e1e);
+  background: linear-gradient(to top right, rgba(58, 158, 30, 0.6), #257830);
   border-radius: 10px;
   align-items: center;
   justify-content: center;
@@ -59,7 +59,7 @@
   font-size: 0.9rem;
   padding: 10px;
   border-radius: 3px;
-  background-color: #3a9e1e;
+  background-color: #257830;
   display: flex;
   align-items: center;
   color: #fff;
@@ -77,7 +77,7 @@
   font-size: 0.7rem;
   padding: 2px 5px;
   border-radius: 30px;
-  background-color: #3a9e1e;
+  background-color: #257830;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -92,7 +92,7 @@
   border-radius: 30px;
   padding: 10px;
   color: #fff;
-  background-color: #3a9e1e;
+  background-color: #257830;
   border: none;
   position: fixed;
   bottom: 25px;
@@ -120,7 +120,7 @@
   padding: 10px 0;
 }
 .react-chatbot-kit-chat-bot-message {
-  background: #3a9e1e !important;
+  background: #257830 !important;
   color: white;
   border-radius: 40px;
   width: 70%;
@@ -134,13 +134,13 @@
 }
 .react-chatbot-kit-user-chat-message {
   color: white;
-  background: #3a9e1e;
+  background: #257830;
   border-radius: 40px;
   max-width: 70%;
   padding: 4px 22px;
 }
 .react-chatbot-kit-user-avatar-icon {
-  color: #3a9e1e;
+  color: #257830;
 }
 .react-chatbot-kit-chat-inner-container {
   height: 100%;
@@ -151,7 +151,7 @@
   padding: 0 16px;
 }
 .react-chatbot-kit-chat-header {
-  background: #3a9e1e;
+  background: #257830;
   color: #fff;
   text-align: center;
   padding: 16px;
@@ -165,7 +165,7 @@
   gap: 10px;
 }
 .react-chatbot-kit-chat-input {
-  border: 1px solid #3a9e1e;
+  border: 1px solid #257830;
   border-radius: 10px;
   padding: 0 10px;
   width: 80%;
@@ -177,7 +177,7 @@
   width: 20%;
   border-radius: 10px;
   padding: 10px;
-  background: #3a9e1e !important;
+  background: #257830 !important;
   height: 50px;
 }
 .react-chatbot-kit-chat-btn-send-icon {
